wip: skipped test during build